# rust_api

./: .env  Cargo.toml
src/: main.rs
src/application/: user_service.rs
src/delivery/: http.rs
src/domain/: user.rs
src/infrastructure/: db.rs  jwt.rs
