[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"             # Web framework
serde = { version = "1.0", features = ["derive"] }  # Serialization
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }  # Postgres client
jsonwebtoken = "8"          # JWT
chrono = { version = "0.4", features = ["serde"] }  # Date/time
tokio = { version = "1", features = ["full"] }  # Async runtime
dotenv = "0.15"             # Environment variables
serde_json = "1.0.139"
